parts 1 and 2 completed

--- a/ETL_Mini_Project_TTruong_RHighley_SBissell.ipynb
+++ b/ETL_Mini_Project_TTruong_RHighley_SBissell.ipynb
@@ -1191,10 +1191,8 @@
    "source": [
     "# Format the launched_date and end_date columns to datetime format\n",
     "from datetime import datetime as dt\n",
-    "campaign_df = campaign_df.astype({\n",
-    "    \"launch_date\":\"datetime64[ns]\",\n",
-    "    \"end_date\":\"datetime64[ns]\"\n",
-    "})"
+    "campaign_df[\"launch_date\"] = pd.to_datetime(campaign_df[\"launch_date\"]).dt.strftime(\"%Y-%m-%d\")\n",
+    "campaign_df[\"end_date\"] = pd.to_datetime(campaign_df[\"end_date\"]).dt.strftime(\"%Y-%m-%d\") \n"
    ]
   },
   {
@@ -1205,23 +1203,23 @@
     {
      "data": {
       "text/plain": [
-       "cf_id                               int64\n",
-       "contact_id                          int64\n",
-       "company_name                       object\n",
-       "description                        object\n",
-       "goal                              float64\n",
-       "pledged                           float64\n",
-       "outcome                            object\n",
-       "backers_count                       int64\n",
-       "country                            object\n",
-       "currency                           object\n",
-       "launch_date                datetime64[ns]\n",
-       "end_date                   datetime64[ns]\n",
-       "staff_pick                           bool\n",
-       "spotlight                            bool\n",
-       "category & sub-category            object\n",
-       "categories                         object\n",
-       "subcategories                      object\n",
+       "cf_id                        int64\n",
+       "contact_id                   int64\n",
+       "company_name                object\n",
+       "description                 object\n",
+       "goal                       float64\n",
+       "pledged                    float64\n",
+       "outcome                     object\n",
+       "backers_count                int64\n",
+       "country                     object\n",
+       "currency                    object\n",
+       "launch_date                 object\n",
+       "end_date                    object\n",
+       "staff_pick                    bool\n",
+       "spotlight                     bool\n",
+       "category & sub-category     object\n",
+       "categories                  object\n",
+       "subcategories               object\n",
        "dtype: object"
       ]
      },
@@ -1298,7 +1296,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>...</td>\n",
-       "      <td>1970-01-01 00:00:01.623992400</td>\n",
+       "      <td>1970-01-01</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>film &amp; video/drama</td>\n",
@@ -1322,7 +1320,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>...</td>\n",
-       "      <td>1970-01-01 00:00:01.622005200</td>\n",
+       "      <td>1970-01-01</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>music/rock</td>\n",
@@ -1346,7 +1344,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>...</td>\n",
-       "      <td>1970-01-01 00:00:01.612850400</td>\n",
+       "      <td>1970-01-01</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>film &amp; video/drama</td>\n",
@@ -1370,7 +1368,7 @@
        "      <td>IT</td>\n",
        "      <td>EUR</td>\n",
        "      <td>...</td>\n",
-       "      <td>1970-01-01 00:00:01.625720400</td>\n",
+       "      <td>1970-01-01</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>photography/photography books</td>\n",
@@ -1394,7 +1392,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>...</td>\n",
-       "      <td>1970-01-01 00:00:01.638856800</td>\n",
+       "      <td>1970-01-01</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>publishing/translations</td>\n",
@@ -1418,7 +1416,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>...</td>\n",
-       "      <td>1970-01-01 00:00:01.622350800</td>\n",
+       "      <td>1970-01-01</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>food/food trucks</td>\n",
@@ -1442,7 +1440,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>...</td>\n",
-       "      <td>1970-01-01 00:00:01.638252000</td>\n",
+       "      <td>1970-01-01</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>theater/plays</td>\n",
@@ -1466,7 +1464,7 @@
        "      <td>IT</td>\n",
        "      <td>EUR</td>\n",
        "      <td>...</td>\n",
-       "      <td>1970-01-01 00:00:01.639116000</td>\n",
+       "      <td>1970-01-01</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>theater/plays</td>\n",
@@ -1490,7 +1488,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>...</td>\n",
-       "      <td>1970-01-01 00:00:01.618117200</td>\n",
+       "      <td>1970-01-01</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>music/indie rock</td>\n",
@@ -1514,7 +1512,7 @@
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
        "      <td>...</td>\n",
-       "      <td>1970-01-01 00:00:01.629262800</td>\n",
+       "      <td>1970-01-01</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>food/food trucks</td>\n",
@@ -1555,53 +1553,41 @@
        "998      Polarized composite customer loyalty   66600.0   37823.0      failed   \n",
        "999               Expanded eco-centric policy  111100.0   62819.0    canceled   \n",
        "\n",
-       "     backers_count country currency  ...                      end_date  \\\n",
-       "990             64      US      USD  ... 1970-01-01 00:00:01.623992400   \n",
-       "991            241      US      USD  ... 1970-01-01 00:00:01.622005200   \n",
-       "992            132      US      USD  ... 1970-01-01 00:00:01.612850400   \n",
-       "993             75      IT      EUR  ... 1970-01-01 00:00:01.625720400   \n",
-       "994            842      US      USD  ... 1970-01-01 00:00:01.638856800   \n",
-       "995           2043      US      USD  ... 1970-01-01 00:00:01.622350800   \n",
-       "996            112      US      USD  ... 1970-01-01 00:00:01.638252000   \n",
-       "997            139      IT      EUR  ... 1970-01-01 00:00:01.639116000   \n",
-       "998            374      US      USD  ... 1970-01-01 00:00:01.618117200   \n",
-       "999           1122      US      USD  ... 1970-01-01 00:00:01.629262800   \n",
+       "     backers_count country currency  ...    end_date staff_pick  spotlight  \\\n",
+       "990             64      US      USD  ...  1970-01-01      False       True   \n",
+       "991            241      US      USD  ...  1970-01-01      False       True   \n",
+       "992            132      US      USD  ...  1970-01-01      False       True   \n",
+       "993             75      IT      EUR  ...  1970-01-01      False       True   \n",
+       "994            842      US      USD  ...  1970-01-01      False       True   \n",
+       "995           2043      US      USD  ...  1970-01-01      False       True   \n",
+       "996            112      US      USD  ...  1970-01-01      False      False   \n",
+       "997            139      IT      EUR  ...  1970-01-01      False      False   \n",
+       "998            374      US      USD  ...  1970-01-01      False       True   \n",
+       "999           1122      US      USD  ...  1970-01-01      False      False   \n",
        "\n",
-       "    staff_pick  spotlight        category & sub-category    categories  \\\n",
-       "990      False       True             film & video/drama  film & video   \n",
-       "991      False       True                     music/rock         music   \n",
-       "992      False       True             film & video/drama  film & video   \n",
-       "993      False       True  photography/photography books   photography   \n",
-       "994      False       True        publishing/translations    publishing   \n",
-       "995      False       True               food/food trucks          food   \n",
-       "996      False      False                  theater/plays       theater   \n",
-       "997      False      False                  theater/plays       theater   \n",
-       "998      False       True               music/indie rock         music   \n",
-       "999      False      False               food/food trucks          food   \n",
+       "           category & sub-category    categories      subcategories  \\\n",
+       "990             film & video/drama  film & video              drama   \n",
+       "991                     music/rock         music               rock   \n",
+       "992             film & video/drama  film & video              drama   \n",
+       "993  photography/photography books   photography  photography books   \n",
+       "994        publishing/translations    publishing       translations   \n",
+       "995               food/food trucks          food        food trucks   \n",
+       "996                  theater/plays       theater              plays   \n",
+       "997                  theater/plays       theater              plays   \n",
+       "998               music/indie rock         music         indie rock   \n",
+       "999               food/food trucks          food        food trucks   \n",
        "\n",
-       "         subcategories category_id category name subcategory_id  \\\n",
-       "990              drama        5cat  film & video        7subcat   \n",
-       "991               rock        2cat         music        2subcat   \n",
-       "992              drama        5cat  film & video        7subcat   \n",
-       "993  photography books        8cat   photography       15subcat   \n",
-       "994       translations        6cat    publishing       19subcat   \n",
-       "995        food trucks        1cat          food        1subcat   \n",
-       "996              plays        4cat       theater        4subcat   \n",
-       "997              plays        4cat       theater        4subcat   \n",
-       "998         indie rock        2cat         music        8subcat   \n",
-       "999        food trucks        1cat          food        1subcat   \n",
-       "\n",
-       "      subcategory name  \n",
-       "990              drama  \n",
-       "991               rock  \n",
-       "992              drama  \n",
-       "993  photography books  \n",
-       "994       translations  \n",
-       "995        food trucks  \n",
-       "996              plays  \n",
-       "997              plays  \n",
-       "998         indie rock  \n",
-       "999        food trucks  \n",
+       "    category_id category name subcategory_id   subcategory name  \n",
+       "990        5cat  film & video        7subcat              drama  \n",
+       "991        2cat         music        2subcat               rock  \n",
+       "992        5cat  film & video        7subcat              drama  \n",
+       "993        8cat   photography       15subcat  photography books  \n",
+       "994        6cat    publishing       19subcat       translations  \n",
+       "995        1cat          food        1subcat        food trucks  \n",
+       "996        4cat       theater        4subcat              plays  \n",
+       "997        4cat       theater        4subcat              plays  \n",
+       "998        2cat         music        8subcat         indie rock  \n",
+       "999        1cat          food        1subcat        food trucks  \n",
        "\n",
        "[10 rows x 21 columns]"
       ]
@@ -1621,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1631,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1648,9 +1634,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>contact_info</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{\"contact_id\": 4661, \"name\": \"Cecilia Velasco\", \"email\": \"cecilia.velasco@rodrigues.fr\"}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>{\"contact_id\": 3765, \"name\": \"Mariana Ellis\", \"email\": \"mariana.ellis@rossi.org\"}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>{\"contact_id\": 4187, \"name\": \"Sofie Woods\", \"email\": \"sofie.woods@riviere.com\"}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>{\"contact_id\": 4941, \"name\": \"Jeanette Iannotti\", \"email\": \"jeanette.iannotti@yahoo.com\"}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                            \n",
+       "0                                                                               contact_info\n",
+       "1   {\"contact_id\": 4661, \"name\": \"Cecilia Velasco\", \"email\": \"cecilia.velasco@rodrigues.fr\"}\n",
+       "2          {\"contact_id\": 3765, \"name\": \"Mariana Ellis\", \"email\": \"mariana.ellis@rossi.org\"}\n",
+       "3            {\"contact_id\": 4187, \"name\": \"Sofie Woods\", \"email\": \"sofie.woods@riviere.com\"}\n",
+       "4  {\"contact_id\": 4941, \"name\": \"Jeanette Iannotti\", \"email\": \"jeanette.iannotti@yahoo.com\"}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Read the data into a Pandas DataFrame. Use the `header=2` parameter when reading in the data.\n",
     "contact_info_df = pd.read_excel('Resources/contacts.xlsx', header=2)\n",
@@ -1681,9 +1730,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "# Iterate through the contact_info_df and convert each row to a dictionary.\n",
     "import json\n",
@@ -1696,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1706,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1715,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1728,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1737,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1746,9 +1803,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'contacts_df_clean' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[29], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Export the DataFrame as a CSV file. \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m contacts_df_clean\u001b[39m.\u001b[39mto_csv(\u001b[39m\"\u001b[39m\u001b[39mResources/contacts.csv\u001b[39m\u001b[39m\"\u001b[39m, encoding\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mutf8\u001b[39m\u001b[39m'\u001b[39m, index\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'contacts_df_clean' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Export the DataFrame as a CSV file. \n",
     "contacts_df_clean.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
