--- a/ETL_Mini_Project_TTruong_RHighley_SBissell.ipynb
+++ b/ETL_Mini_Project_TTruong_RHighley_SBissell.ipynb
@@ -6769,6 +6769,9 @@
    ],
    "source": [
     "# Iterate through the contact_info_df and convert each row to a dictionary.\n",
+    "# Create a \"first\"name\" and \"last_name\" column with the first and last names from the \"name\" column. \n",
+    "# Drop the contact_name column\n",
+    "# Reorder the columns\n",
     "dict_values = []\n",
     "\n",
     "for row in contact_info_values:\n",
@@ -6904,37 +6907,6 @@
    "source": [
     "# Check the datatypes.\n",
     "contact_info.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a \"first\"name\" and \"last_name\" column with the first and last names from the \"name\" column. \n",
-    "\n",
-    "\n",
-    "# Drop the contact_name column\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Reorder the columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check the datatypes one more time before exporting as CSV file."
    ]
   },
   {
