--- a/ETL_Mini_Project_TTruong_RHighley_SBissell.ipynb
+++ b/ETL_Mini_Project_TTruong_RHighley_SBissell.ipynb
@@ -6911,24 +6911,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'contacts_df_clean' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[29], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Export the DataFrame as a CSV file. \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m contacts_df_clean\u001b[39m.\u001b[39mto_csv(\u001b[39m\"\u001b[39m\u001b[39mResources/contacts.csv\u001b[39m\u001b[39m\"\u001b[39m, encoding\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mutf8\u001b[39m\u001b[39m'\u001b[39m, index\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'contacts_df_clean' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Export the DataFrame as a CSV file. \n",
-    "contacts_df_clean.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
+    "\n",
+    "contact_info.to_csv(\"Resources/campaign.csv\", index=False)"
    ]
   },
   {
