--- a/ETL_Mini_Project_TTruong_RHighley_SBissell.ipynb
+++ b/ETL_Mini_Project_TTruong_RHighley_SBissell.ipynb
@@ -6917,7 +6917,7 @@
    "source": [
     "# Export the DataFrame as a CSV file. \n",
     "\n",
-    "contact_info.to_csv(\"Resources/campaign.csv\", index=False)"
+    "contact_info.to_csv(\"Resources/contacts.csv\", index=False)"
    ]
   },
   {
